fixed shared folder causing crash if not existing